data/gnupg-users/dominyktiller_gmail_com.txt

@_date: 2014-12-17 12:54:37
@_author: Dominyk Tiller 
@_subject: [Announce] GnuPG 2.1.1 released 
Hi Werner,
Thanks for the new release, It solves a lot of the OS X compile problems
we were seeing, which is great.
I'm still hitting a new one though. If you attempt to compile using an
external gpg-agent, rather than one with the package, you hit this:

@_date: 2014-12-18 20:19:56
@_author: Dominyk Tiller 
@_subject: [Announce] GnuPG 2.1.1 released 
Apologies, that option is indeed gone.
I was trying to pass it anyhow, in order to use an external (but
up-to-date) gpg-agent as my agent, because that's how I was configuring
the 2.0.x branch, "--disable-agent
When I went to build this new release of the 2.1.x branch I just
automatically passed those configure options, and when the configure
script didn't flag the option as unrecognised I wondered if it was a bug
that it was erroring out. I should have probably double-checked to see
if I was just being stupid ;).
Cheers for the reply,
Sent from OS X. If you wish to communicate more securely my PGP Public
Key is 0x872524db9d74326c.

@_date: 2014-12-31 19:36:28
@_author: Dominyk Tiller 
@_subject: Fwd: Re: [Announce] GnuPG 2.1.1 released 
============================== START ==============================
Hi Werner,
Apologies, I'm an idiot. The option is still there.

@_date: 2015-04-11 23:29:56
@_author: Dominyk Tiller 
@_subject: GnuPG 2.1.3 Fails to Compile OS X 
Hey Werner,
Thanks for the new release!
I'm having some issues making it compile on OS X, right across
10.8-10.10.3. Tried both Apple's Clang and GNU's GCC so I'm presuming
the error isn't compiler-specific.
It's throwing slightly different errors on OS X 10.8 than it is on 10.9
and 10.10. The 10.8 error is:
t-stringhelp.c:488:3: error: function definition is not allowed here
  {
  ^
t-stringhelp.c:536:4: error: expected ';' at end of declaration
  }
   ^
   ;
2 errors generated.
make[3]: *** [t-stringhelp.o] Error 1
And the 10.9 - 10.10.3 error is just:
t-stringhelp.c:488:3: error: function definition is not allowed here
  {
  ^
1 error generated.
make[3]: *** [t-stringhelp.o] Error 1
Have attached various compile logs.

@_date: 2015-04-13 01:16:25
@_author: Dominyk Tiller 
@_subject: GnuPG 2.1.3 Fails to Compile OS X 
Hi Ethan,
Thanks for the quick replies today, appreciate those.
You're correct on GNU's GCC, in that it compiles successfully. It looks
like I labelled one of my Clang compiles "GCC_Comp1.txt" last night
accidentally and looked for the error rather than double checking the
compiler to make sure I'd actually labelled the output correctly. Lesson
learned there.
The Clang error on all three platforms examined, 10.8, 10.9 & 10.10
remains true. I double checked that just to make sure I wasn't being an
idiot there as well.
Thanks for the offer of the signed, pre-build tarball. That was kind of
you. Sadly in this case it wouldn't have helped because I'm trying to
update our Homebrew/Versions GnuPG21 package. I'm still using the 2.0.x
branch personally, for now.
Is the Clang error something GnuPG can fix in the coming versions or are
we going to be waiting on Apple to fix the underlying LLVM issue?
Apologies for my mess up on the GCC failure, and Thanks for the help.
Sent from OS X. If you wish to communicate more securely my PGP Public
Key is 0x872524db9d74326c.
